--- a/JCBear/test.html
+++ b/JCBear/test.html
@@ -1,42 +1,20 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>颜色闪缩</title>
-    <script src="./jquery-3.3.1.js"> </script>
+    <meta charset="utf-8">
+    <title>360 Video</title>
+    <meta name="description" content="360 Video — A-Frame">
+    <script src="js/aframe.min.js"></script>
 </head>
 <body>
-<div id="color_flash">
-    <div class="lit_slashNum" style="transition: all 0.5s; background-color: #ff0000;-moz-box-shadow:0px 0px 10px 2px #ff0000; -webkit-box-shadow:0px 0px 10px 2px #ff0000; box-shadow:0px 0px 10px 2px #ff0000;"></div>
-</div>
+<a-scene>
+    <a-assets>
+        <video id="antarctica" autoplay loop="true" src="img/Strabroke222 - converted with Clipchamp.mp4"> </video>
+    </a-assets>
 
-
+    <!-- Using the asset management system. -->
+    <a-videosphere src="#antarctica"></a-videosphere>
+</a-scene>
 </body>
-<script>
-    setInterval(changeColor,500);
-
-    //js
-    var colorFlag = 0;
-    function changeColor() {
-        let lit_slashNum = document.querySelector(".lit_slashNum");
-        if (!colorFlag)
-        {
-            lit_slashNum.style.backgroundColor = '#ff0000';
-            lit_slashNum.style.boxShadow = '0px 500px 100px 500px #ff0000';
-            colorFlag = 1;
-        }else{
-            lit_slashNum.style.backgroundColor = '';
-            lit_slashNum.style.boxShadow = '';
-            colorFlag = 0;
-        }
-    }
-
-    // jq
-    // function litSlash(){
-    //     $(".lit_slashNum").animate(
-    //         {opacity:"0"},250); //改变透明度
-    //     $(".lit_slashNum").animate(
-    //         {opacity:"1"},500);
-    // }
-</script>
 </html>
