--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -1,156 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>8th Wall Web: Tap to place</title>
-
-    <link rel="stylesheet" type="text/css" href="animation-mixer/index.css">
-
-    <script src="JS/aframe-particle-system-component.min.js"></script>
-
-    <!-- We've included a slightly modified version of A-Frame, which fixes some polish concerns -->
-    <script src="//cdn.8thwall.com/web/aframe/8frame-0.8.2.min.js"></script>
-    <script src="//cdn.8thwall.com/web/aframe/aframe-animation-component-5.1.2.min.js"></script>
-    <script src="//cdn.8thwall.com/web/aframe/aframe-extras-4.2.0.min.js"></script>
-
-    <!-- XR Extras - provides utilities like load screen, almost there, and error handling.
-         See github.com/8thwall/web/xrextras -->
-    <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
-
-    <!-- 8thWall Web - Replace the app key here with your own app key -->
-    <script async
-            src="//apps.8thwall.com/xrweb?appKey=yQuHDZG37SGLBSHGZuBN9ZvLSIzCbSnU95VbYEfCAW1AtPQxxoqF5IT7QTZwuqB5UmHMBp"></script>
-
-<!--    <script>-->
-<!--        window.onload = function () {-->
-<!--            if (!(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent))) {-->
-<!--                window.location.href = "room.html"-->
-<!--            }-->
-<!--        };-->
-<!--    </script>-->
-
-    <script>
-        // Component that places trees where the ground is clicked
-        AFRAME.registerComponent('tap-place', {
-            init: function () {
-                const ground = document.getElementById('ground')
-                ground.addEventListener('click', event => {
-                    // Create new entity for the new object
-                    const newElement = document.createElement('a-entity')
-
-                    // The raycaster gives a location of the touch in the scene
-                    const touchPoint = event.detail.intersection.point
-                    newElement.setAttribute('position', touchPoint)
-
-                    const randomYRotation = Math.random() * 360
-                    newElement.setAttribute('rotation', '0 ' + randomYRotation + ' 0')
-
-                    newElement.setAttribute('visible', 'false')
-                    newElement.setAttribute('scale', '0.0001 0.0001 0.0001')
-
-                    newElement.setAttribute('gltf-model', '#KTC')
-                    this.el.sceneEl.appendChild(newElement)
-
-                    newElement.addEventListener('model-loaded', () => {
-                        // Once the model is loaded, we are ready to show it popping in using an animation
-                        newElement.setAttribute('visible', 'true')
-                        newElement.setAttribute('id', 'house')
-                        newElement.setAttribute('animation', {
-                            property: 'scale',
-                            to: '0.2 0.2 0.2',
-                            easing: 'easeOutElastic',
-                            dur: 800,
-                        })
-                    })
-                }, {once: true})
-            }
-        })
-    </script>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style>
+        a {
+            font-size: 5rem;
+            word-wrap: break-word;
+        }
+    </style>
 </head>
-
 <body>
-
-
-<!-- We must add the tap-place component to the scene so it has an effect -->
-<a-scene
-        xrweb
-        tap-place
-        xrextras-almost-there
-        xrextras-loading
-        xrextras-runtime-error>
-
-    <audio id="bgMusic" src="JingleBells.mp3" autoplay="autoplay" loop="loop"></audio>
-
-    <a href="javascript:" id="musicPlay" onclick="playPause()">
-        🎶
-    </a>
-
-    <a href="room.html" id="nextbutton">
-        <div class="nextbutton">进入小屋</div>
-    </a>
-
-    <a-entity position="0 2.25 -15" particle-system="preset: snow; particleCount: 5000"></a-entity>
-
-    <!-- We can define assets here to be loaded when A-Frame initializes -->
-    <a-assets>
-        <a-asset-item id="KTC" src="GLTF/ALL.gltf"></a-asset-item>
-    </a-assets>
-
-    <!-- The raycaster will emit mouse events on scene objects specified with the cantap class -->
-    <a-camera
-            position="0 0 0"
-            raycaster="objects: .cantap"
-            cursor="
-          fuse: false;
-          rayOrigin: mouse;">
-
-    </a-camera>
-
-    <a-entity
-            light="type: directional;
-               intensity: 0.8;"
-            position="1 4.3 2.5">
-    </a-entity>
-
-    <a-light type="ambient" intensity="1"></a-light>
-
-    <!-- Adding the cantap class allows the ground to be clicked -->
-    <a-entity
-            id="ground"
-            class="cantap"
-            geometry="primitive: box"
-            material="color: #ffffff; transparent: true; opacity: 0.0"
-            scale="1000 2 1000"
-            position="0 -1 0">
-    </a-entity>
-
-    <script>
-        var scene = document.querySelector('a-scene');
-
-        if (scene.hasLoaded) {
-            run();
-        } else {
-            scene.addEventListener('loaded', run);
-        }
-
-        var audio = document.getElementById("bgMusic");
-        function run() {
-            setInterval(function () {
-                if (document.getElementById("house") != null) {
-                    document.getElementById("nextbutton").style.display = "block";
-                }
-            }, 50)
-            audio.play();
-        }
-
-        function playPause() {
-            if (audio.paused) {
-                audio.play();
-            } else {
-                audio.pause();
-            }
-        }
-    </script>
-</a-scene>
+<div>
+    <a href="video.html">1.video in the project</a><br/><br/>
+    <a href="video1.html">2.JIMMY_CHOO_GRADE_BLUE_V1_1440HSharpen</a><br/><br/>
+    <a href="video2.html">3.JIMMY_CHOO_GRADE_BLUE_V1_1920HSharpen2</a><br/><br/>
+</div>
 </body>
 </html>
