--- a/AFrame/video1.html
+++ b/AFrame/video1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
 </head>
 <body>
 <a-scene>
